--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-client": "^2.6.8",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts-parcel": "0.0.38"
