--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "apollo-client": "^2.6.8",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts-parcel": "0.0.38"
   },
   "scripts": {
