--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts-parcel": "0.0.38"
+    "react-scripts-parcel": "0.0.38",
+    "styled-components": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts-parcel start",
