--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "apollo-client": "^2.6.8",
+    "autoprefixer": "^9.7.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts-parcel": "0.0.38"
