--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     ]
   },
   "devDependencies": {
+    "@apollo/react-testing": "^3.1.3",
+    "@testing-library/jest-dom": "^5.1.1",
+    "@testing-library/react": "^9.4.0",
     "babel-core": "^6.26.3"
   }
 }
