--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "styled-components": "^5.0.0"
   },
   "scripts": {
-    "start": "parcel public/index.html"
+    "start": "parcel public/index.html",
+    "build": "parcel build public/index.html"
   }
 }
