--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
-    "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
     "apollo-boost": "^0.4.7",
     "apollo-client": "^2.6.8",
@@ -20,19 +19,21 @@
   "scripts": {
     "start": "parcel public/index.html",
     "build": "parcel build public/index.html",
-    "test": "jest --watch"
+    "test": "jest --watchAll"
   },
   "devDependencies": {
     "@apollo/react-testing": "^3.1.3",
-    "@testing-library/jest-dom": "^5.1.1",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
     "@testing-library/react": "^9.4.0",
+    "babel-jest": "^25.1.0",
     "jest": "^25.1.0",
-    "jest-cli": "^25.1.0"
+    "react-test-renderer": "^16.12.0"
   },
   "jest": {
-    "transformIgnorePatterns": [
-      "<rootDir>/src/images/*.svg",
-      "<rootDir>/src/*.css"
-    ]
+    "transform": {
+      "^.+\\.svg$": "<rootDir>/svgTransform.js",
+      "^.+\\.(js|jsx)$": "babel-jest"
+    }
   }
 }
