--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@babel/preset-react": "^7.8.3",
-    "apollo-boost": "^0.4.7",
+    "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
+    "apollo-link-http": "^1.5.16",
     "autoprefixer": "^9.7.4",
     "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
     "parcel-bundler": "^1.12.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
