--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
   "devDependencies": {
     "@apollo/react-testing": "^3.1.3",
     "@babel/core": "^7.8.4",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
     "@testing-library/react": "^9.4.0",
     "babel-jest": "^25.1.0",
     "jest": "^25.1.0",
-    "react-test-renderer": "^16.12.0"
+    "react-test-renderer": "^16.12.0",
+    "waait": "^1.0.5"
   },
   "jest": {
     "transform": {
