--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "@testing-library/react": "^9.4.0",
     "babel-jest": "^25.1.0",
     "jest": "^25.1.0",
-    "react-test-renderer": "^16.12.0",
-    "waait": "^1.0.5"
+    "react-test-renderer": "^16.12.0"
   },
   "jest": {
     "transform": {
