--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "scripts": {
     "start": "parcel public/index.html",
     "build": "parcel build public/index.html",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "coverage": "jest --coverage --detectOpenHandles --forceExit || true"
   },
   "devDependencies": {
     "@apollo/react-testing": "^3.1.3",
@@ -41,6 +42,12 @@
     },
     "testPathIgnorePatterns": [
       "/mock_data/"
+    ],
+    "collectCoverageFrom": [
+      "**/*.{js,jsx}",
+      "!**/node_modules/**",
+      "!**/vendor/**",
+      "!**/__tests__/**"
     ]
   }
 }
