--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "jest": "^25.1.0",
     "react-test-renderer": "^16.12.0"
   },
+  "browserslist": [
+    "since 2017-06"
+  ],
   "jest": {
     "transform": {
       "^.+\\.svg$": "<rootDir>/svgTransform.js",
