--- a/package.json
+++ b/package.json
@@ -34,11 +34,18 @@
     "@testing-library/react": "^9.4.0",
     "babel-jest": "^25.1.0",
     "jest": "^25.1.0",
+    "parcel-plugin-workbox": "^0.2.0",
     "react-test-renderer": "^16.12.0"
   },
   "browserslist": [
     "since 2017-06"
   ],
+  "workbox": {
+    "importScripts": [
+      "./src/sw.js"
+    ],
+    "globDirectory": "./dist"
+  },
   "jest": {
     "transform": {
       "^.+\\.svg$": "<rootDir>/svgTransform.js",
