--- a/package.json
+++ b/package.json
@@ -34,17 +34,18 @@
     "@testing-library/react": "^9.4.0",
     "babel-jest": "^25.1.0",
     "jest": "^25.1.0",
-    "parcel-plugin-workbox": "^0.2.0",
-    "react-test-renderer": "^16.12.0"
+    "parcel-plugin-sw-cache": "^0.3.1",
+    "react-test-renderer": "^16.12.0",
+    "workbox-build": "^5.0.0"
   },
   "browserslist": [
     "since 2017-06"
   ],
-  "workbox": {
-    "importScripts": [
-      "./src/sw.js"
-    ],
-    "globDirectory": "./dist"
+  "cache": {
+    "disablePlugin": false,
+    "inDev": false,
+    "strategy": "default",
+    "clearDist": true
   },
   "jest": {
     "transform": {
