--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "styled-components": "^5.0.0"
   },
   "scripts": {
-    "start": "parcel public/index.html",
-    "build": "parcel build public/index.html",
+    "start": "node parcelBundler.js",
+    "build": "parcel build public/index.html && node -e \"require('./workboxBuild.js')()\"",
     "test": "jest --watchAll",
     "coverage": "jest --coverage --detectOpenHandles --forceExit || true"
   },
@@ -34,18 +34,8 @@
     "@testing-library/react": "^9.4.0",
     "babel-jest": "^25.1.0",
     "jest": "^25.1.0",
-    "parcel-plugin-sw-cache": "^0.3.1",
     "react-test-renderer": "^16.12.0",
     "workbox-build": "^5.0.0"
-  },
-  "browserslist": [
-    "since 2017-06"
-  ],
-  "cache": {
-    "disablePlugin": false,
-    "inDev": false,
-    "strategy": "default",
-    "clearDist": true
   },
   "jest": {
     "transform": {
