--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
     "parcel-bundler": "^1.12.4",
+    "parcel-plugin-static-files-copy": "^2.3.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
@@ -21,9 +22,13 @@
   "scripts": {
     "start": "node parcelBundler.js",
     "startDev": "parcel public/index.html",
-    "build": "parcel build public/index.html public/_redirects && node -e \"require('./workboxBuild.js')()\"",
+    "build": "parcel build public/index.html && node -e \"require('./workboxBuild.js')()\"",
     "test": "jest --watchAll",
     "coverage": "jest --coverage --detectOpenHandles --forceExit || true"
+  },
+  "staticFiles": {
+    "staticPath": "public",
+    "watcherGlob": "**/_redirects"
   },
   "devDependencies": {
     "@apollo/react-testing": "^3.1.3",
