--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "^9.7.4",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
+    "jslib-html5-camera-photo": "^3.1.3",
     "parcel-bundler": "^1.12.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
