added transform on jest config to deal with css and png files

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   },
   "jest": {
     "transform": {
-      "^.+\\.svg$": "<rootDir>/svgTransform.js",
+      "^.+\\.(svg|png|css)$": "<rootDir>/svgTransform.js",
       "^.+\\.(js|jsx)$": "babel-jest"
     },
     "testPathIgnorePatterns": [
