--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jslib-html5-camera-photo": "^3.1.3",
     "parcel-bundler": "^1.12.4",
     "react": "^16.12.0",
+    "react-collapse": "^5.0.1",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "save-dev": "0.0.1-security",
